django install.txt
Microsoft Windows [Versión 10.0.19045.3803]
(c) Microsoft Corporation. Todos los derechos reservados.

C:\Users\Cetecom>myenv\Scripts\activate
El sistema no puede encontrar la ruta especificada.

C:\Users\Cetecom>myenv\Scripts\activate
El sistema no puede encontrar la ruta especificada.

C:\Users\Cetecom>python
Python 3.11.3 (tags/v3.11.3:f3909b8, Apr  4 2023, 23:49:59) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> exit
Use exit() or Ctrl-Z plus Return to exit
>>> exit python
  File "<stdin>", line 1
    exit python
         ^^^^^^
SyntaxError: invalid syntax
>>> exit()

C:\Users\Cetecom>cd c:
C:\Users\Cetecom

C:\Users\Cetecom>cd pgy3121
El sistema no puede encontrar la ruta especificada.

C:\Users\Cetecom>cd pgy3121 :
El nombre de archivo, el nombre de directorio o la sintaxis de la etiqueta del volumen no son correctos.
C:\Users\Cetecom>cd pgy3121
El sistema no puede encontrar la ruta especificada.

C:\Users\Cetecom>cd pgy3121
El sistema no puede encontrar la ruta especificada.

C:\Users\Cetecom>cd :
El nombre de archivo, el nombre de directorio o la sintaxis de la etiqueta del volumen no son correctos.
C:\Users\Cetecom>cd_
"cd_" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\Users\Cetecom>cd:
El nombre de archivo, el nombre de directorio o la sintaxis de la etiqueta del volumen no son correctos.
C:\Users\Cetecom>cd ..

C:\Users>cd..

C:\>pgy3121
"pgy3121" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\>cd pgy2131
El sistema no puede encontrar la ruta especificada.

C:\>dir
 El volumen de la unidad C no tiene etiqueta.
 El número de serie del volumen es: 68FD-B202

 Directorio de C:\

20-07-2023  18:39    <DIR>          ADE
10-02-2023  14:32    <DIR>          AMD
10-11-2023  08:06    <DIR>          android
20-07-2023  18:26    <DIR>          app
10-02-2023  12:10    <DIR>          Autodesk
20-12-2022  10:43    <DIR>          Bizagi
14-02-2023  09:09             8.287 DFInstall.log
09-09-2023  14:56             6.563 DIAL Communication Framework Setup Log.txt
09-09-2023  14:56            67.495 DIALux Setup Information.txt
10-02-2023  13:35           222.651 DIALux Setup Log.txt
10-02-2023  15:03    <DIR>          DRIVERS
14-02-2023  09:06       786.432.000 Fss0.dsk
01-12-2006  22:37           904.704 msdia80.dll
21-12-2022  10:40    <DIR>          Oracle
21-12-2022  11:39    <DIR>          oraclexe
07-12-2019  05:14    <DIR>          PerfLogs
25-05-2024  12:18        16.634.624 Persi0.sys
25-05-2024  12:35    <DIR>          pgy3121
20-04-2024  16:41    <DIR>          Program Files
20-04-2024  16:45    <DIR>          Program Files (x86)
20-12-2022  10:36               980 setuplog.txt
20-12-2022  15:16    <DIR>          SQL2019
17-12-2022  09:56    <DIR>          SWTOOLS
28-11-2023  20:27    <DIR>          sycenter
17-12-2022  09:39    <DIR>          Users
06-02-2024  15:15    <DIR>          Windows
21-12-2022  13:57    <DIR>          xampp
               8 archivos    804.277.304 bytes
              19 dirs  492.927.508.480 bytes libres

C:\>cd pgy3121

C:\pgy3121> myenv\Scripts\activate

(myenv) C:\pgy3121>pip install Django
Collecting Django
  Downloading Django-5.0.6-py3-none-any.whl (8.2 MB)
     ---------------------------------------- 8.2/8.2 MB 10.1 MB/s eta 0:00:00
Collecting asgiref<4,>=3.7.0
  Downloading asgiref-3.8.1-py3-none-any.whl (23 kB)
Collecting sqlparse>=0.3.1
  Downloading sqlparse-0.5.0-py3-none-any.whl (43 kB)
     ---------------------------------------- 44.0/44.0 kB 2.1 MB/s eta 0:00:00
Collecting tzdata
  Downloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)
     ---------------------------------------- 345.4/345.4 kB 20.9 MB/s eta 0:00:00
Installing collected packages: tzdata, sqlparse, asgiref, Django
Successfully installed Django-5.0.6 asgiref-3.8.1 sqlparse-0.5.0 tzdata-2024.1

[notice] A new release of pip available: 22.3.1 -> 24.0
[notice] To update, run: python.exe -m pip install --upgrade pip

(myenv) C:\pgy3121>django-admin-version
"django-admin-version" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

(myenv) C:\pgy3121>django-admin --version
5.0.6

(myenv) C:\pgy3121>django-admin starproject myproject
No Django settings specified.
Unknown command: 'starproject'. Did you mean startproject?
Type 'django-admin help' for usage.

(myenv) C:\pgy3121>django-admin startproject myproject

(myenv) C:\pgy3121>cd myproject

(myenv) C:\pgy3121\myproject>python manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
May 25, 2024 - 12:49:39
Django version 5.0.6, using settings 'myproject.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.

[25/May/2024 12:50:15] "GET / HTTP/1.1" 200 10629
Not Found: /favicon.ico
[25/May/2024 12:50:15] "GET /favicon.ico HTTP/1.1" 404 2113
